fix layout problem

--- a/css/layouts/main.css
+++ b/css/layouts/main.css
@@ -174,11 +174,16 @@ a.pure-button-primary {
 }
 
 .splash-serach-bar{
-    height:40%;
+    height:100%;
     width:100%;
+    position:absolute;
     background-color: rgba(0,0,0, 0.6);
 }
 
+form.search-bar{
+    margin-top:5%;
+    line-height: 50%;
+}
 
 
 /*
@@ -192,8 +197,6 @@ a.pure-button-primary {
     width: 100%;
     min-height: 12%;
     z-index: 2;
-    background: white;
-
 }
 
 /* This is the class used for the main content headers (<h2>) */
@@ -225,7 +228,8 @@ a.pure-button-primary {
 
 /* This is the class used for the footer */
 .footer {
-    background: #111;
+    background: white;
+    color:black;
 }
 
 /*
@@ -261,7 +265,7 @@ a.pure-button-primary {
     /* We decrease the width of the .splash, since we have more width
     to work with */
     .splash {
-        width: 50%;
+        width: 100%;
         height: 50%;
     }
 
